[tool.poetry]
name = "cafe-api-start"
version = "0.1.0"
description = ""
authors = ["bbland1 <104288486+bbland1@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "cafe_api_start"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.1"
flask-sqlalchemy = "^3.0.3"
flask-migrate = "^4.0.4"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
